[gd_scene load_steps=11 format=3 uid="uid://dy17jaermquaa"]

[ext_resource type="Script" path="res://Core/UI/HUD/hud.gd" id="1_ku5ab"]
[ext_resource type="PackedScene" uid="uid://b3lux4srfnsh4" path="res://Core/UI/HUD/Store/store.tscn" id="1_xp5ni"]
[ext_resource type="Script" path="res://Core/UI/HUD/PlayerInterface/player_interface.gd" id="2_miedf"]
[ext_resource type="Texture2D" uid="uid://b1vs0okbp4qj2" path="res://icon.svg" id="3_m82of"]
[ext_resource type="PackedScene" uid="uid://dfj8bj1xfyfmt" path="res://Core/UI/HUD/PlayerInterface/life_bar.tscn" id="3_pdxq5"]
[ext_resource type="Texture2D" uid="uid://dx7t4omxenkpt" path="res://Core/UI/HUD/preparation_time_bar_progress.png" id="4_0j1r6"]
[ext_resource type="PackedScene" uid="uid://sc70hdt2ucgy" path="res://Core/UI/HUD/PlayerInterface/passive_skills_list.tscn" id="4_1iykr"]
[ext_resource type="PackedScene" uid="uid://n5317gueobj5" path="res://Core/UI/HUD/PlayerInterface/active_skills_list.tscn" id="5_q52k7"]
[ext_resource type="PackedScene" uid="uid://b22w43jwcyyxw" path="res://Core/UI/HUD/SkillPicker/skill_picker.tscn" id="5_wpddp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bwhrk"]
bg_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ku5ab")
metadata/_edit_horizontal_guides_ = [624.0, 648.0, 24.0, 264.0]
metadata/_edit_vertical_guides_ = [24.0, 1128.0, 1112.0, 40.0]

[node name="PlayerInterface" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -264.0
offset_right = 222.0
offset_bottom = -40.0
grow_vertical = 0
pivot_offset = Vector2(0, 224)
theme_override_styles/panel = SubResource("StyleBoxFlat_bwhrk")
script = ExtResource("2_miedf")
turn_indicator_color = Color(0.345098, 0.811765, 0.521569, 1)

[node name="LifeBar" parent="PlayerInterface" instance=ExtResource("3_pdxq5")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -129.0
offset_right = 82.0
offset_bottom = -63.0
grow_vertical = 0

[node name="PassiveSkillsList" parent="PlayerInterface" instance=ExtResource("4_1iykr")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 98.0
offset_top = -168.0
offset_right = 206.0
offset_bottom = -24.0
grow_vertical = 0
pivot_offset = Vector2(0, 96)

[node name="ActiveSkillsList" parent="PlayerInterface" instance=ExtResource("5_q52k7")]
layout_mode = 0

[node name="RoleIcon" type="TextureRect" parent="PlayerInterface"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -16.0
offset_right = 64.0
grow_vertical = 0
pivot_offset = Vector2(0, 16)
texture = ExtResource("3_m82of")
expand_mode = 1

[node name="PeerNameLabel" type="Label" parent="PlayerInterface"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = -19.0
offset_right = 144.0
offset_bottom = 2.0
grow_vertical = 0
text = "Username"
vertical_alignment = 2

[node name="EnemyInterface" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -222.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = 264.0
grow_horizontal = 0
pivot_offset = Vector2(0, 120)
theme_override_styles/panel = SubResource("StyleBoxFlat_bwhrk")
script = ExtResource("2_miedf")
turn_indicator_color = Color(0.345098, 0.811765, 0.521569, 1)

[node name="LifeBar" parent="EnemyInterface" instance=ExtResource("3_pdxq5")]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 98.0
offset_top = -165.0
offset_right = 181.0
offset_bottom = -95.0
grow_vertical = 0
pivot_offset = Vector2(0, 21)

[node name="PassiveSkillsList" parent="EnemyInterface" instance=ExtResource("4_1iykr")]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -187.0
offset_right = 104.0
offset_bottom = -43.0
grow_vertical = 0
pivot_offset = Vector2(0, 96)

[node name="ActiveSkillsList" parent="EnemyInterface" instance=ExtResource("5_q52k7")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_top = 176.0
offset_right = 88.0
offset_bottom = 224.0
grow_horizontal = 2

[node name="RoleIcon" type="TextureRect" parent="EnemyInterface"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -136.0
offset_top = -2.0
offset_right = -120.0
offset_bottom = 14.0
grow_horizontal = 0
pivot_offset = Vector2(12, 0)
texture = ExtResource("3_m82of")
expand_mode = 1

[node name="PeerNameLabel" type="Label" parent="EnemyInterface"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -108.0
offset_top = -3.0
offset_right = -45.0
offset_bottom = 21.0
grow_horizontal = 0
text = "Username"

[node name="HBoxContainer" type="HBoxContainer" parent="EnemyInterface"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Store" parent="." instance=ExtResource("1_xp5ni")]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -240.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="SkillPicker" parent="." instance=ExtResource("5_wpddp")]
unique_name_in_owner = true
visible = false

[node name="PreparationTimeBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -67.0
offset_right = 210.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
step = 0.025
value = 100.0
nine_patch_stretch = true
texture_progress = ExtResource("4_0j1r6")

[node name="PreparationTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
